Manage null case.